# claude-usage-tracker

./: Cargo.toml  Info.plist  README.md  com.user.claude-usage-tracker.plist  install.sh
.github/workflows/: release.yml
Formula/: claude-usage-tracker.rb
scripts/: build_app.sh
src/: aggregator.rs  alert.rs  config.rs  main.rs  menubar.rs  output.rs
src/sources/: claude_code.rs  claude_web.rs  mod.rs  oauth_api.rs
