[package]
name = "claude-usage-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
walkdir = "2"
mac-notification-sys = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
