[package]
name = "claude-usage-tracker"
version = "2.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
mac-notification-sys = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSAttributedString", "NSButton", "NSColor", "NSEvent", "NSFont", "NSMenu", "NSMenuItem", "NSAlert", "NSTextField", "NSParagraphStyle", "NSStatusBar", "NSStatusItem", "NSStatusBarButton"] }
objc2-foundation = { version = "0.3", features = ["NSAttributedString", "NSDate", "NSRunLoop", "NSString"] }
